# rematching

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-macos.yml  cmake-multi-platform.yml  cmake-ubuntu.yml  cmake-windows.yml
include/rmt/: clean.hpp  eval.hpp  flatunion.hpp  graph.hpp  io.hpp  mesh.hpp  preprocess.hpp  reconstruction.hpp  region.hpp  rmt.hpp  utils.hpp  voronoifps.hpp  weightmap.hpp
include/rmt/mex/: rmt.hpp
matlab/: compile.m  rmt_remesh.m  rmt_resample.m  rmt_wmap.m
python/: sample.py
samples/: cat2-remesh.mat  cat2-remesh.off  cat2.off
src/apps/: batch.cpp  remesh.cpp
src/mex/: mex_remesh.cpp  mex_resample.cpp  mex_wmap.cpp
src/mex/interface/: rmt.cpp
src/python/: pyrmt.cpp
src/rmt/: clean.cpp  eval.cpp  flatunion.cpp  graph.cpp  io.cpp  mesh.cpp  preprocess.cpp  reconstruction.cpp  region.cpp  regiondict.cpp  rmt.cpp  voronoifps.cpp  weightmap.cpp
